--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,7 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div style="position: fixed;
+    <div style="position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
