--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,7 +40,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div style="position: absolute;
+    <div style="position: relative;
+    clear: both;
     left: 0;
     bottom: 0;
     width: 100%;
