--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="position: relative">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,7 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div style="position: static;
+    <div style="position: absolute;
     clear: both;
     left: 0;
     bottom: 0;
