--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,7 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div style="position: absolute;
+    
+  </body>
+  <footer style="position: fixed;
     clear: both;
     left: 0;
     bottom: 0;
@@ -50,6 +52,5 @@
       <p style="margin-bottom: 2px; margin-top: 0; color:beige">Made with ❤ by Naman Balaji</p>
       <a style="margin-top: 0; margin-bottom: 4px; color:beige" href="https://www.linkedin.com/in/naman-balaji-a35602178/">LinkedIn</a> <a  style="margin-top: 0; color:beige"href="https://github.com/NamanBalaji">Github</a>
 
-    </div>
-  </body>
+    </footer>
 </html>
